syntax = "proto3";

package currency;

option go_package = "proto/currency";

service CurrencyService { // defines a gRPC service called CurrencyService
  rpc GetExchangeRate (ExchangeRateRequest) returns (ExchangeRateResponse); //GetExchangeRate is a RPC call method
}

message ExchangeRateRequest { // defines a data structure for the request name ExchangeRateRequest
  string base_currency = 1;
  string target_currency = 2;
}

message ExchangeRateResponse { //  defines a data structure for the response
  double rate = 1;
}
